Bug 456692 - Both european portuguese and brazilian portuguese languages are called 'português'
Summary: Both european portuguese and brazilian portuguese languages are called 'portu...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: master
Platform: Balsam Professional Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-13 21:45 UTC by Patrick Silva
Modified: 2022-07-14 17:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (107.22 KB, image/png)
2022-07-13 21:45 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-07-13 21:45:23 UTC
Created attachment 150601 [details]
screenshot

SUMMARY
When we click on the button to add a language, a popup opens and lists all available languages.
In this popup both european portuguese and brazilian portuguese languages are called 'português'.
Please see the attached screenshot.

EXPECTED RESULT
different names,  so we are able to easily select the desired portuguese in the languages list

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-07-14 15:40:17 UTC
Can confirm.
Comment 2 Nate Graham 2022-07-14 17:03:05 UTC
Git commit 2e230933495fee16feecf797dd8f84b464ccd55c by Nate Graham, on behalf of Han Young.
Committed on 14/07/2022 at 17:03.
Pushed by ngraham into branch 'master'.

kcms/region_language: re-add logic to distinguish pt from pt_BR

The Old KCM had this, but it was mistakenly left commented out in
the new one.

M  +5    -9    kcms/region_language/languagelistmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2e230933495fee16feecf797dd8f84b464ccd55c