kcms/region_language: re-add logic to distinguish pt from pt_BR

The Old KCM had this, but it was mistakenly left commented out in
the new one.

BUG: 456692