kcms/region_language/languagelistmodel.cpp
@@ -72,15 +72,11 @@ QString LanguageListModel::languageCodeToName(const QString &languageCode)
         return i18nc("%1 is language name, %2 is language code name", "%1 (%2)", languageName, languageCode);
     }
 
-    //    if (locale.name() != languageCode && m_availableLanguages.contains(locale.name())) {
-    //        // KDE languageCode got translated by QLocale to a locale code we also have on
-    //        // the list. Currently this only happens with pt that gets translated to pt_BR.
-    //        if (languageCode == QLatin1String("pt")) {
-    //            return QLocale(QStringLiteral("pt_PT")).nativeLanguageName();
-    //        }
-
-    //        return i18nc("%1 is language name, %2 is language code name", "%1 (%2)", languageName, languageCode);
-    //    }
+    // KDE languageCode got translated by QLocale to a locale code we also have on
+    // the list. Currently this only happens with pt that gets translated to pt_BR.
+    if (languageCode == QStringLiteral("pt_BR")) {
+        return i18nc("%1 is português in system locale name, Brazil is to distinguish European português and Brazilian português", "%1 (Brazil)", languageName);
+    }
 
     return languageName;
 }
